# NyxChat

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: app.js  index.html  styles.css
scripts/: fetch-tor-macos-universal.sh  fetch-tor.ps1  fetch-tor.sh
src/: App.tsx  api.ts  calls.ts  devices.ts  i18n.ts  icons.tsx  main.tsx  richtext.tsx  sound.ts  styles.css  theme.ts  types.ts  useCall.ts  util.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crypto.rs  main.rs  net.rs  tor.rs  tornet.rs
src/components/: Call.tsx  Chat.tsx  CommandPalette.tsx  Composer.tsx  ContextMenu.tsx  ConversationList.tsx  GroupManage.tsx  Home.tsx  Network.tsx  NewGroup.tsx  Qr.tsx  Rail.tsx  SettingsView.tsx  Sidebar.tsx
